--- a/style.css
+++ b/style.css
@@ -184,3 +184,112 @@ nav,footer,.bgorange{
 .jborder{
     border:5px solid black;
 }
+
+/*circle*/
+.cercle1 {
+    height: 4em;
+    width: 4em;
+    border-width: 0.3em;
+    border-style: solid;
+    border-color: orange;
+    border-radius: 4em;
+    box-shadow: 2px 2px 5px orange;
+  }
+  
+  .cercle2 {
+    height: 9em;
+    width: 9em;
+    border-width: 0.6em;
+    border-style: solid;
+    border-color: yellow;
+    border-radius: 4em;
+    box-shadow: 2px 2px 5px yellow;
+  }
+  
+  .cercle-1 {
+    height: 2em;
+    width: 2em;
+    border-width: 2px;
+    border-style: solid;
+    border-color: dark;
+    border-radius: 4em;
+    box-shadow: 0.3em 0.1em 1em black;
+    margin: -0.5em;
+  }
+  
+  .cercle-2 {
+    height: 4em;
+    width: 4em;
+    border-width: 4px;
+    border-style: solid;
+    border-color: dark;
+    border-radius: 8em;
+    box-shadow: 0.3em 0.1em 1em black;
+    margin: -1em;
+  }
+  
+  .cercle-3 {
+    height: 6em;
+    width: 6em;
+    border-width: 6px;
+    border-style: solid;
+    border-color: dark;
+    border-radius: 12em;
+    box-shadow: 0.3em 0.1em 1em black;
+    margin: -1.5em;
+  }
+  
+  .cercle-4 {
+    height: 8em;
+    width: 8em;
+    border-width: 8px;
+    border-style: solid;
+    border-color: dark;
+    border-radius: 16em;
+    box-shadow: 0.3em 0.1em 1em black;
+    margin: -2em;
+  }
+  
+  .cercle-5 {
+    height: 10em;
+    width: 10em;
+    border-width: 10px;
+    border-style: solid;
+    border-color: dark;
+    border-radius: 20em;
+    box-shadow: 0.3em 0.1em 1em black;
+    margin: -2.5em;
+  }
+  
+  .cercle-6 {
+    height: 12em;
+    width: 12em;
+    border-width: 12px;
+    border-style: solid;
+    border-color: dark;
+    border-radius: 24em;
+    box-shadow: 0.3em 0.1em 1em black;
+    margin: -3em;
+  }
+  
+  .first {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4em;
+  }
+  
+  .second {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3em;
+  }
+  
+  .third {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5em;
+  }
+
+  .jre{
+    padding-bottom: 2em;
+  }
